Added Chain Reaction II and Oops achievement

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,5 +108,7 @@
     <string name="freeze_thaw">CgkI-bb0u_MYEAIQBg</string>
     <string name="chain_reaction_i">CgkI-bb0u_MYEAIQBw</string>
     <string name="poisoning_the_well">CgkI-bb0u_MYEAIQCA</string>
+    <string name="chain_reaction_ii">CgkI-bb0u_MYEAIQCQ</string>
+    <string name="oops">CgkI-bb0u_MYEAIQCg</string>
 
 </resources>
