Added falling with style i and ii achievements

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -110,5 +110,7 @@
     <string name="poisoning_the_well">CgkI-bb0u_MYEAIQCA</string>
     <string name="chain_reaction_ii">CgkI-bb0u_MYEAIQCQ</string>
     <string name="oops">CgkI-bb0u_MYEAIQCg</string>
+    <string name="falling_with_style_i">CgkI-bb0u_MYEAIQCw</string>
+    <string name="falling_with_style_ii">CgkI-bb0u_MYEAIQDA</string>
 
 </resources>
