--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -112,5 +112,9 @@
     <string name="oops">CgkI-bb0u_MYEAIQCg</string>
     <string name="falling_with_style_i">CgkI-bb0u_MYEAIQCw</string>
     <string name="falling_with_style_ii">CgkI-bb0u_MYEAIQDA</string>
+    <string name="what_a_waste">CgkI-bb0u_MYEAIQDQ</string>
+    <string name="states_of_matter">CgkI-bb0u_MYEAIQDg</string>
+    <string name="page_turner_i">CgkI-bb0u_MYEAIQDw</string>
+    <string name="page_turner_ii">CgkI-bb0u_MYEAIQEA</string>
 
 </resources>
